# mace

./: CMakeLists.txt
include/mace/public/: mace.h
include/mace/utils/: mace_engine_config.h
mace/core/: BUILD.bazel  tensor.h  types.h
mace/core/net/: base_net.h
mace/flows/: BUILD.bazel  CMakeLists.txt  flow_registry.cc
mace/flows/apu/: BUILD.bazel
mace/libmace/: BUILD.bazel  CMakeLists.txt  mace_engine_config.cc
mace/runtimes/: BUILD.bazel  CMakeLists.txt  runtime_registry.cc
mace/runtimes/apu/: BUILD.bazel  CMakeLists.txt  apu_runtime.h
mace/runtimes/apu/v4/: neuron_delegate_builder.h
mace/tools/: BUILD.bazel
tools/cmake/: cmake-build-arm64-v8a.sh  cmake-build-armeabi-v7a.sh
