        glob(["v1v2v3/v1/*.cc"]),
        glob(["v1v2v3/v2v3/*.cc"]),
        glob(["v1v2v3/v2v3/*.cc"]),
       
        glob(["v1v2v3/*.h"]),
        glob(["v1v2v3/*.h"]),
        glob(["v1v2v3/*.h"]),
       
        ["-DMACE_MTK_APU_VERSION=1"],
        ["-DMACE_MTK_APU_VERSION=2"],
        ["-DMACE_MTK_APU_VERSION=3"],
